[package]
name = "lau-reinforcement-learning-advanced"
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/SuperInstance/lau-reinforcement-learning-advanced"
description = "Advanced reinforcement learning algorithms: DQN, policy gradients, actor-critic, PPO, TRPO, model-based RL, multi-agent RL, hierarchical RL, and curiosity-driven exploration"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
nalgebra = "0.33"
rand = "0.8"
rand_distr = "0.4"

[dev-dependencies]
approx = "0.5"
